# darkmatter-linux

./: .gitattributes  .gitignore  .rubocop.yml  .syncthing.Cargo.lock.tmp  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  findings.json
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: _build.yml  ci.yml  release.yml
dm-ui/: Cargo.toml
dm-ui/src/: lib.rs
lang/: darkmatter-linux.pot  dm-ui.pot  wnl-ui.pot
scripts/: dm-scenario.rb  dmvm.rb  install-hooks.sh  po-clean.sh  update-translations.sh
scripts/scenarios/: build.rb  chaotic.rb  cheeky.rb  soak.rb  utils.rb
src/: animal_avatar.rs  audio.rs  backend.rs  backup.rs  chatlist.rs  chatmodel.rs  chrome.rs  main.rs  media.rs  media_cache.rs  mpv.rs  notify.rs  offline_queue.rs  render.rs  settings.rs  state.rs  unread.rs  vault.rs
src/backend/: groups.rs
src/wiring/: backup.rs  extra.rs  forward.rs  messaging.rs  mod.rs  panes.rs
ui/: CONTRACT.md  chat-list.slint  dark-matter-linux.slint  emoji-picker.slint  get-started.slint  messages.slint  splash.slint  status-bar.slint  tokens.slint
ui/archived/: archived-list-item.slint  archived-page.slint
ui/contacts/: contact-detail.slint  contact-list-item.slint  contacts-page.slint
ui/icons/: accounts-icon.slint  archive-icon.slint  chat-bubble-icon.slint  chevron-down-icon.slint  key-icon.slint  people-icon.slint  pin-icon.slint
ui/left-rail/: left-rail.slint
ui/login/: login-screen.slint
ui/main-pane/: add-member-card.slint  chat-header.slint  composer.slint  encryption-banner.slint  (+6 more)
wnl-ui/: Cargo.toml  build.rs
(+51 files in other folders)
