[package]
name = "dm-ui"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

# This crate exists purely for build-time isolation: it owns the Slint
# compilation (build.rs) and the ~345k-line generated UI module, so editing
# Rust code in the root crate doesn't recompile the whole UI tree. Only
# .slint / lang/ changes rebuild this crate.

[dependencies]
slint = "1.8"

[build-dependencies]
slint-build = "1.8"
# build.rs uses these to compose the Twemoji sprite sheet at compile time.
twemoji-assets = { version = "1.5", default-features = false, features = [
  "png",
] }
image = { version = "0.25", default-features = false, features = ["png"] }
emojis = "0.6"
